# x1ayu-rag

./: .gitignore  README.md  demo.db  pyproject.toml  verify_query_features.py  verify_recursive_sync.py
.trae/documents/: CLI 修复报告.md  CLI 输出格式列表化完成.md  CLI 错误提示优化完成.md  IngestService Refactor Plan.md  LLM 接口分离重构完成.md  优化 Chain 命令错误提示.md  优化错误处理分层结构.md  修复 CLI 输出中 Action 标签显示问题.md  支持显示 Skipped 文件状态.md  简化配置错误提示.md
.x1ayu_rag_v2/: sqlite.db
demo/: cli.py  milvus.py  sqlite.py
docs/: architecture.md
src/note_rag/: main.py
src/note_rag/chain/: chain.py
src/note_rag/cli/: cli.py
src/note_rag/db/: milvus.py  sqlite.py
src/note_rag/model/: chunk.py  document.py
src/note_rag/utils/: hash.py  mdSplitter.py
src/x1ayu_rag/: main.py
src/x1ayu_rag/api/: ingest_api.py  query_api.py  system_api.py
src/x1ayu_rag/chain/: chain.py  debug.py  generator.py  prompt.py  rag_chain.py  retriever.py
src/x1ayu_rag/cli/: cli.py  decorators.py  ui.py
src/x1ayu_rag/config/: app_config.py  constants.py
src/x1ayu_rag/db/: milvus.py  milvus_db.py  sqlite.py  sqlite_db.py
src/x1ayu_rag/llm/: base.py  factory.py  ollama_provider.py  openai_provider.py  provider.py
src/x1ayu_rag/model/: chunk.py  document.py
src/x1ayu_rag/repository/: chunk_repository.py  document_repository.py  system_repository.py
src/x1ayu_rag/service/: constants.py  ingest_service.py  query_service.py  search_service.py  system_service.py
src/x1ayu_rag/splitter/: base.py  markdown.py
src/x1ayu_rag/utils/: hash.py  mdSplitter.py  path_utils.py
src/x1ayu_rag_v2/: main.py
src/x1ayu_rag_v2/api/: ingest_api.py  query_api.py  system_api.py
(+21 files in other folders)
