[project]
name = "note-rag"
version = "0.1.0"
description = "My Note RAG Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "bs4>=0.0.2",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "markdown-it-py>=4.0.0",
    "mistletoe>=1.5.0",
    "pymilvus[milvus-lite]>=2.6.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
rag = "note_rag.main:cli"

[tool.setuptools.package-data]
"note_rag.config.file" = ["*.sql"]

[tool.setuptools.packages.find]
where = ["src"]