[project]
name = "x1ayu_rag"
version = "0.1.0"
description = "My Note RAG Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "bs4>=0.0.2",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=1.0.0",
    "markdown-it-py>=4.0.0",
    "mistletoe>=1.5.0",
    "pymilvus[milvus-lite]>=2.6.4",
    "textual>=6.7.1",
    "textual-dev>=1.8.0",
    "click>=8.1.7",
    "rich>=13.7.1",
    "inquirer>=3.2.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
rag = "x1ayu_rag.main:cli"

[tool.setuptools.package-data]
"x1ayu_rag.config.file" = ["*.sql"]

[tool.setuptools.packages.find]
where = ["src"]
